--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game_container">
-        <h1>Tic Tac Tode</h1>
+        <h1>Tic Tac Toe</h1>
         <div id="cellContainer">
             <div cellIndex="0" class="cell"></div>
             <div cellIndex="1" class="cell"></div>
@@ -21,7 +21,7 @@
             <div cellIndex="8" class="cell"></div>
         </div>
         <h2 id="statusText"></h2>
-        <button id="restatBtn">Restart</button>
+        <button id="restartBtn">Restart</button>
     </div>
     <script src="script.js"></script>
 </body>
